option('at_spi_registryd_dir', type: 'string', value: '', description: 'Specify the directory of at_spi_registryd.')
option('check_accelerated_dir', type: 'string', value: '', description: 'Specify the directory of gnome_session_check_accelerated.')
option('custom_conf', type: 'string', value: '', description: 'Filename to give to custom configuration file.')
option('dbus_sys', type: 'string', value: '', description: 'Where D_Bus systemd directory is.')
option('default_pam_config', type: 'combo', choices: [ 'autodetect', 'redhat', 'openembedded', 'exherbo', 'lfs', 'arch', 'none'], value: 'autodetect', description: '')
option('default_path', type: 'string', value: '/usr/local/bin:/usr/local/sbin:/usr/bin:/usr/sbin:/bin:/sbin', description: 'Path GDM will use as the user\'s default PATH.')
option('defaults_conf', type: 'string', value: '', description: 'Filename to give to defaults file.')
option('dmconfdir', type: 'string', value: '', description: 'Directory where sessions are stored.')
option('gdm_xsession', type: 'boolean', value: false, description: 'Enable installing the gdm Xsession file.')
option('gnome_settings_daemon_dir', type: 'string', value: '', description: 'Specify the directory of gnome_settings_daemon used by the chooser.')
option('group', type: 'string', value: 'gdm', description: 'GDM\'s group.')
option('initial_vt', type: 'integer', value: 1, description: 'Initial virtual terminal to use.')
option('ipv6', type: 'boolean', value: false, description: 'Enables compilation of IPv6 code.')
option('lang_file', type: 'string', value: '', description: 'File containing default language settings.')
option('libaudit', type: 'feature', value: 'auto', description: 'Add Linux audit support.')
option('log_dir', type: 'string', value: '/var/log/gdm', description: 'Log directory.')
option('pam_mod_dir', type: 'string', value: '', description: 'Directory to install PAM modules in.')
option('pam_prefix', type: 'string', value: '', description: 'Specify where PAM files go.')
option('pid_file', type: 'string', value: '', description: 'Pid file.')
option('plymouth', type: 'feature', value: 'auto', description: 'Add plymouth support.')
option('profiling', type: 'boolean', value: false, description: 'Enable profiling.')
option('ran_once_marker_dir', type: 'string', value: '', description: 'Ran once marker directory.')
option('run_dir', type: 'string', value: '', description: 'Runtime directory.')
option('runtime_conf', type: 'string', value: '', description: 'Filename to give to runtime configuration file.')
option('screenshot_dir', type: 'string', value: '', description: 'Directory to store greeter screenshot.')
option('selinux', type: 'feature', value: 'auto', description: 'Add SELinux support.')
option('solaris', type: 'boolean', value: false, description: 'Build for Solaris')
option('split_authentication', type: 'boolean', value: true, description: 'Enable multiple simultaneous PAM conversations during login.')
option('sysconfsubdir', type: 'string', value: 'gdm', description: 'Directory name used under sysconfdir.')
option('systemd_journal', type: 'boolean', value: false, description: 'Add journald support.')
option('systemdsystemunitdir', type: 'string', value: '', description: 'Directory for systemd service files.')
option('tcp_wrappers', type: 'boolean', value: false, description: 'Use TCP wrappers.')
option('udev_dir', type: 'string', value: '', description: 'Directory for udev rules file.')
option('user', type: 'string', value: 'gdm', description: 'GDM\'s username.')
option('user_display_server', type: 'boolean', value: true, description: 'Enable running X server as user.')
option('wayland_support', type: 'boolean', value: true, description: 'Enable support for wayland sessions.')
option('working_dir', type: 'string', value: '', description: 'Working directory.')
option('xauth_dir', type: 'string', value: '', description: 'XAuth cookie directory.')
option('xdmcp', type: 'feature', value: 'auto', description: 'Add XDMCP (remote login) support.')
